test/corpus/meta.txt
==========
Meta block
==========

meta {
  name: Send Bulk SMS
  type: http
  seq: 1
}

---

(document
  (meta
    (keyword)
    (dictionary
      (pair
        (key)
        (value))
      (pair
        (key)
        (value))
      (pair
        (key)
        (value)))))
